--- a/readzip+show+marks analyse 00-Copy4.ipynb
+++ b/readzip+show+marks analyse 00-Copy4.ipynb
@@ -2606,7 +2606,12 @@
    },
    "outputs": [],
    "source": [
-    "le meme mais il y a un probleme dans la detection des patterns\n"
+    "programme pour trouover les features (et eventuellement modifier le pattern detection)\n",
+    "\n",
+    "ca marche, on rentre une date de debut, une longueur de earning et une longueur de test et ca sort le stats\n",
+    "\n",
+    " detecteur pour qu'il renvoie s'il a trouve le pattern, et si ca a donné le resultat attendu\n",
+    " modifier extractfeatures pour rajouter:modifier des features\n"
    ]
   },
   {
@@ -2652,13 +2657,12 @@
     "                continue\n",
     "            \n",
     "            dateheure=[annee,mois,jour,heure,minutes,minute]\n",
-    "            print dateheure\n",
+    "          #  print dateheure\n",
     "            \n",
     "            #lu open =1 high =2 low=3 close=4\n",
-    "            #quad genere open close hight low (1,4,2,3)\n",
-    "            quadvalues = [dateheure,float(splitLine[1]),float(splitLine[4]),float(splitLine[2]),float(splitLine[3])]\n",
+    "            quadvalues = [dateheure,float(splitLine[1]),float(splitLine[2]),float(splitLine[3]),float(splitLine[4])]\n",
     "            \n",
-    "            print quadvalues\n",
+    "            #print quadvalues\n",
     "            \n",
     "            if minute == mindebut+longueur : #on a depasse la derniere valeur a lire : encore=0\n",
     "                encore =0\n",
@@ -2794,57 +2798,70 @@
     "#la detection se fait sur les 2 eme a xieme items de la stack\n",
     "# car le dernier item est celui qui correspond a l'achat/vente\n",
     "#------------------------------------------------------------------------------\n",
-    "def testrevertupdown(stackdata):\n",
-    "    stackdata.insert(0,['date','deb','fin','top','low'])\n",
-    "    rdata = map(list,zip(*stackdata))\n",
+    "def detecteur(stackdata):\n",
+    "    datawithtitles=[['date','ope','top','low','clo']]\n",
+    "    datawithtitles.extend(stackdata)\n",
+    "    rdata = map(list,zip(*datawithtitles))\n",
     "    #[list(i) for i in zip(*stackdata)] ferait aussi la transposee\n",
-    "    stack = {d[0]:d[1:] for d in rdata}  #on en fait un dict avec nom colonne en cle et valeurs apres\n",
-    "\n",
-    "    #test une descente apres deux montees nettes : signal de depart\n",
+    "    stack = {d[0]:d[1:] for d in rdata}  #on en fait un dict\n",
     "    \n",
-    "    #le dernier commence plus bas que finit le prec\n",
-    "    cond1 = (stack['fin'][-2] > stack['deb'][-1]) \n",
-    "    # le precedent etait parti plus bas que la fin de celui d'avant et etait descendu\n",
+    " # ce test : on a une descente 'debut >fin)\n",
+    " # apres un petite descente suiant 2 montees tres fortes\n",
+    " # une montee tres forte est quand ca monte et que ca monte plus heut que le max de la fois d'avant \n",
+    "    #detecte une descente apres deux montees nettes : signal de depart\n",
+    "    #et verifie que le derneir est ien une descente\n",
+    "    #le dernier est descendu\n",
+    "    \n",
+    "    #analyse si on est descendu apres le pattern\n",
+    "    \n",
+    "    cond1 = (stack['ope'][-1] > stack['clo'][-1]) \n",
+    "\n",
+    "    # detection de pattern\n",
+    "    # le precedent (-2) etait parti plus bas que la fin de celui d'avant (-3) et etait descendu\n",
     "    # debut < fin pour le precedent\n",
-    "    cond2 = (stack['fin'][-3] > stack['deb'][-2]) and  (senscandle(stackdata[-2]) ==2)    #candle descend\n",
+    "    cond2 = (stack['clo'][-3] > stack['clo'][-2]) and  (stack['ope'][-2] > stack['clo'][-2]) #on a une descente    \n",
     "    #celui d'avant etait une montee : commence + haut que son prec et est une montee\n",
     "    #celui encore avant : idem\n",
-    "    cond3 = (stack['fin'][-4] < stack['deb'][-3]) and (senscandle(stackdata[-3]) ==1) #candle monte\n",
-    "    cond4 = (stack['fin'][-5] < stack['deb'][-4]) and  (senscandle(stackdata[-4]) ==1) #candle monte\n",
+    "    # et on verifie que le montees sont tres fortes : le fin et > au max de la minute d'avant\n",
+    "    cond3 = (stack['top'][-4] < stack['clo'][-3]) and (stack['ope'][-3] < stack['clo'][-3]) #apres deux montees celle ci\n",
+    "    cond4 = (stack['top'][-5] < stack['clo'][-4]) and  (stack['ope'][-4] < stack['clo'][-4])  # et celle la\n",
     "    \n",
-    "    return cond1 , cond2 and cond3 and cond4 \n",
+    "    return cond1 , cond2 and cond3 and cond4 #retourne en arg 1 : resutat, argument 2 : detection de pattern\n",
     "\n",
     "#---------------------------------\n",
     "#normlise les dnnees du pattern\n",
     "#---------------------------------\n",
     "def normalisedata(stackdata):\n",
-    "    valmin = float(stackdata[-5][2])\n",
-    "    valmax = float(stackdata[-2][2])\n",
+    "    valmin = float(stackdata[-5][3]) #ohlc : c'est le low du premier\n",
+    "    valmax = float(stackdata[-3][2])  #ohlc c'est le high du troisiee c a d le plus haut\n",
     "    scale = (valmax - valmin) #/(valmax+valmin)*2\n",
     "    output=[]\n",
     "    for i in [-5,-4,-3,-2,-1]:\n",
     "            output.append((stackdata[i][2]-valmin)/scale)\n",
+    "            #print \"norm;\",output\n",
     "    return output\n",
     "\n",
     "#------------------------------------------------------------------------------\n",
     "#------------------------------------------------------------------------------\n",
     "\n",
     "def extractfeatures(stackdata):\n",
-    "    stackdata.insert(0,['date','deb','fin','top','low'])\n",
-    "    rdata = map(list,zip(*stackdata))\n",
+    "    datawithtitles=[['date','ope','top','low','clo']]\n",
+    "    datawithtitles.extend(stackdata)\n",
+    "            \n",
+    "    rdata = map(list,zip(*datawithtitles))\n",
     "    #[list(i) for i in zip(*stackdata)] ferait aussi la transposee\n",
     "    rdict = {d[0]:d[1:] for d in rdata}  #on en fait un dict\n",
     "\n",
     "    featureline=[]\n",
     "    #sort les features d'avan le retournement\n",
     "    featureline.append(rdict['low'][-2] - rdict['top'][-2]) #delta minmax\n",
-    "    featureline.append(rdict['deb'][-2] - rdict['fin'][-2]) #delta deb fin\n",
+    "    featureline.append(rdict['ope'][-2] - rdict['clo'][-2]) #delta deb fin\n",
     "    featureline.append(rdict['low'][-3] - rdict['top'][-3]) #delta minmax\n",
-    "    featureline.append(rdict['deb'][-3] - rdict['fin'][-3]) #delta deb fin\n",
+    "    featureline.append(rdict['ope'][-3] - rdict['clo'][-3]) #delta deb fin\n",
     "    featureline.append(rdict['low'][-4] - rdict['top'][-4]) #delta minmax\n",
-    "    featureline.append(rdict['deb'][-4] - rdict['fin'][-4]) #delta deb fin\n",
+    "    featureline.append(rdict['ope'][-4] - rdict['clo'][-4]) #delta deb fin\n",
     "    featureline.append(rdict['low'][-5] - rdict['top'][-5]) #delta minmax\n",
-    "    featureline.append(rdict['deb'][-5] - rdict['fin'][-5]) #delta deb fin\n",
+    "    featureline.append(rdict['ope'][-5] - rdict['clo'][-5]) #delta deb fin\n",
     "    \n",
     "#    print \"feature\",stackdata,featureline\n",
     "    return [i * 10000 for i in featureline] #muliply par 10000\n",
@@ -2867,20 +2884,26 @@
     "    newline.extend(data[1:])  #ajout de la derniere valeur ds stackpast\n",
     "    stackpast.append(newline)\n",
     "    \n",
+    "    #print len(stackpast)    \n",
+    "\n",
     "    if len(stackpast)==7 :\n",
     "        ok=1\n",
-    "        del stackpast[0]  #stackpast ne doit plus s'allonger   \n",
-    "        yess,detected = testrevertupdown(stackpast)\n",
-    "        if detected:\n",
-    "            if yess:\n",
+    "        oldlen = len(stackpast)\n",
+    "        del stackpast[0]  #stackpast ne doit plus s'allonger\n",
+    "        #print \"pop\",oldlen,len(stackpast)\n",
+    "        reussi,detected = detecteur(stackpast)\n",
+    "        #print 'an',[detected,reussi],len(stackpast)\n",
+    "        if detected: # on a eu un pattern\n",
+    "            learning=extractfeatures(stackpast)  #extraction des features\n",
+    "            \n",
+    "            if reussi:  # et le pattern a genere ce qu'on attend\n",
     "                ladiff =1\n",
     "            else:\n",
     "                ladiff = -1\n",
     "                    \n",
-    "        learning=extractfeatures(stackpast)  #extraction des features\n",
-    "        learning.extend([ladiff]) # categorie en fin de feature\n",
+    "            learning.extend([ladiff]) # categorie en fin de feature\n",
     "        \n",
-    "    return ladiff,ok,learning    \n",
+    "    return ok,ladiff,learning #ok : l'analyse  ete faite,     \n",
     "\n",
     "\n",
     "#------------------------------------------------------------------------------\n",
@@ -2915,7 +2938,7 @@
     "    for i in range(len(analysetab)):\n",
     "        if analysetab[i][0]==1 :\n",
     "            indx = analysetab[i][1]\n",
-    "            X.append(candlegraf[indx][0][-1]) #-1 = dennier indice de la liste dateheure : minute\n",
+    "            X.append(candlegraf[indx][0]) #-1 = dennier indice de la liste dateheure : minute\n",
     "            #on ajoute a y le doublet yscale multiplie par 1 (=lui meme) ou 0 (vide) \n",
     "            #c'est pas ce que je voulais faire , je voulais multipler chaque point de y (des 1) par une valeur\n",
     "            #mais bon ca marche un peu. il va falloir passer tout ca en traiteent listes/matrices sinon c'est moche\n",
@@ -2929,8 +2952,9 @@
     "    Y=[]\n",
     "    for i in range(len(analysetab)):\n",
     "        if analysetab[i][0]==-1 :\n",
-    "            indx = analysetab[i][1]\n",
-    "            X.append(candlegraf[indx][0][-1])#on ajoute a y le doublet yscale multiplie par 1 (=lui meme) ou 0 (vide) \n",
+    "            indx = analysetab[i][1]    \n",
+    "           # X.append(candlegraf[indx][0][-1])#on ajoute a y le doublet yscale multiplie par 1 (=lui meme) ou 0 (vide) \n",
+    "            X.append(candlegraf[indx][0])#on ajoute a y le doublet yscale multiplie par 1 (=lui meme) ou 0 (vide) \n",
     "            #c'est pas ce que je voulais faire , je voulais multipler chaque point de y (des 1) par une valeur\n",
     "            #mais bon ca marche un peu. il va falloir passer tout ca en traiteent listes/matrices sinon c'est moche\n",
     "            Y.append([candlegraf[indx][1],candlegraf[indx][2],candlegraf[indx][3],candlegraf[indx][4]])  \n",
@@ -2980,8 +3004,13 @@
     "minute =0\n",
     "index=0\n",
     "\n",
+    "\n",
+    "learningsize=2000\n",
+    "ctrlsize=4000\n",
+    "datestart = [2014,2,2]\n",
+    "\n",
     "#lescanfile = scanfile(1000,1000)\n",
-    "lescanfile = scanfile([2014,2,2],1000)\n",
+    "lescanfile = scanfile(datestart,learningsize)\n",
     "graphyes = []\n",
     "graphno = []\n",
     "\n",
@@ -2993,21 +3022,24 @@
     "        break\n",
     "            \n",
     "            \n",
-    "    resu,ok,features = analyse(quadvalues)    \n",
-    "    if  resu<>0 :  #pile assez grosse pour faire les features : on genere les matrices\n",
-    "        learnmat.append(features) #matrice des features learning\n",
-    "        analysetab.append([resu, index]) #liste des events detectes pour la viualisation des detections \n",
+    "    ok,resu,features = analyse(quadvalues)    \n",
+    "    if  resu <> 0 :  #il y a eu un pattern, \n",
+    "        learnmat.append(features) #on complete la matrice des features learning\n",
+    "        analysetab.append([resu, index]) #liste des resultas de ces patters detectes pour la viualisation des detections avec un nuero d'ordre en plus \n",
     "        if (resu ==1):\n",
-    "            graphyes.append(normalisedata(stackpast))\n",
+    "            print 'ok',1\n",
+    "            graphyes.append(normalisedata(stackpast)) #noralisedata renvoie les 4 veleur normalisees pr le stack\n",
     "        else:\n",
+    "            print 'ok',-1\n",
     "            graphno.append(normalisedata(stackpast))\n",
     " \n",
-    "    if ok:\n",
-    "        print \"ok\"        #ordre ohlc \n",
+    "    if ok:  #l y  eu une analyse\n",
+    "        #ordre ohlc \n",
     "        #on reconstruit une ligne avec 1 X et 4 valeurs\n",
-    "        ladate = quadvalues[0]\n",
-    "        quadline=ladate[-1:]  #-1 : numero d'ordre de la manute \n",
-    "        quadline.extend(quadvalues[1:5])\n",
+    "        datetuple = quadvalues[0]\n",
+    "        quadline=datetuple[-1:]  #-1 : numero d'ordre de la minute \n",
+    "        quadline.extend(quadvalues[1:5])  #on ralone avec lesquatres velurs\n",
+    "        print 'ok',quadline\n",
     "        candlegraf.append(quadline) #matrice des valeurs brutes pour le graph cndles\n",
     "        index= index+1\n",
     "\n",
@@ -3045,14 +3077,14 @@
     "nbyesifno = 0\n",
     "\n",
     "#on rescane l'ensemble de check\n",
-    "lescanfile = scanfile([2014,2,2],2000)\n",
+    "lescanfile = scanfile(datestart,2000)\n",
     "\n",
     "while True:\n",
     "    encore,quadvalues = lescanfile.next()\n",
     "    if encore ==0:\n",
     "        break\n",
     "\n",
-    "    resu,ok,features = analyse(quadvalues)     #calcul des features\n",
+    "    ok,resu,features = analyse(quadvalues)     #calcul des features\n",
     "    if  resu<>0 :  #on a un resultat\n",
     "        valout = clf.predict(features[:-2])\n",
     "        learnresu.append([resu,valout[0]]) #matrice valeur calc, valeur reelle            \n",
@@ -3060,7 +3092,8 @@
     "    if ok:\n",
     "        index= index+1\n",
     "\n",
-    "checkquality(learnresu)\n"
+    "checkquality(learnresu)\n",
+    "\n"
    ]
   }
  ],
